MODON MRE BPDEV/force-app/main/default/objects/BP_Pending_Step_Fields__mdt/BP_Pending_Step_Fields__mdt.object-meta.xml
<CustomObject>
    <label>BP_Pending_Step_Fields</label>
    <pluralLabel>BP_Pending_Step_Fields</pluralLabel>
</CustomObject>