MODON MRE BPDEV/force-app/main/default/objects/BP_Pending_Step_Fields__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display_Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>