MODON MRE BPDEV/force-app/main/default/objects/BP_Pending_Step_Fields__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field_API_Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>