MODON MRE BPDEV/force-app/main/default/objects/BP_Pending_Step_Fields__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field_Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>