MODON MRE BPDEV/force-app/main/default/objects/BP_Pending_Step_Fields__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type_</label>
    <length>200</length>
    <type>Text</type>
</CustomField>